@@ -7,6 +7,12 @@
 class DcpContentItemCellCreator: public MAbstractCellCreator<DcpContentItem>
 {
 public:
+    enum DataRole {
+        MetadataRole = Qt::UserRole + 1,
+        AppletRole,
+        MattiRole
+    };
+
     virtual MWidget * createCell (const QModelIndex &index,
                                   MWidgetRecycler &recycler) const;
     virtual void updateCell(const QModelIndex& index, MWidget * cell) const;
