@@ -1,6 +1,8 @@
 <!DOCTYPE node PUBLIC "-//freedesktop//DTD D-BUS Object Introspection 1.0//EN" "http://www.freedesktop.org/standards/dbus/1.0/introspect.dtd">
 <node>
     <interface name="com.nokia.DuiControlPanelIf">
+        <method name="launch">
+        </method>
         <method name="mainPage">
         </method>
         <method name="categoryPage">
